# jf

./: .coveragerc  .gitignore  .gitlab-ci.yml  .readthedocs.yml  .travis.yml  LICENSE  Makefile  Pipfile  README.md  README.rst  demomodule.py  examples.md  index.html  optional_requirements.txt  requirements.txt  setup.cfg  setup.py  setup_c.py  test.jsonl  test_requirements.txt  tox.ini
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/docs/: examples.rst  jf.rst  modules.rst  more_examples.rst  user_guide.rst
examples/: commonvoice.jf  counter.py  example0.py  hashlib.jf  iotools.py  ml_service.py  pysox.py  text_model.py
extras/: ml.py  service.py
jf/: __init__.py  __main__.py  extra_functions.py  input.py  io.c  io.py  jf_io.py  jfio.py  jsonlgen.cc  main.py  meta.py  ml.py  output.py  parser.py  process.py  query_parser.py  service.py  sklearn_import.py  test_jsonlgen.py
modules/: demomodule.py
pyq/: __init__.py  __main__.py
tests/: io_test.py  query_test.py  test.json  test.list.json  test.xlsx  test.xml  test.yaml  test_io.py  test_lib.py  test_main.py  test_parser.py  test_query.py
