[metadata]
description-file = README.md

[aliases]
test=pytest

[tool:pytest]
timeout = 10
addopts = --verbose --durations=5 --doctest-modules
#addopts = --verbose --durations=5 --flake8 --doctest-modules --cov
flake8-max-line-length = 120
flake8-ignore =
    venv* ALL
markers =
    slow: mark a test as slow
[coverage:run]
omit =
    */.virtualenvs/*
    *.venv/*
    *.eggs/*
    *.test-venv/*

[doc8]
ignore-path=.venv,.eggs,build,requirements.txt,*.egg-info
max-line-length=120

[coverage:report]
fail_under=75
